# python-ai-agent-from-scratch

./: README.md  main.py  pyproject.toml  studies.py  tools.py
outputs/: research_20260528_160111.txt  research_20260528_162255.txt
