[project]
name = "pythonaiagentfromscratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "save>=0.1",
    "tool>=0.8.0",
    "wikipedia>=1.4.0",
]
